# juliaset

./: CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  juliaset.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: juliaset-test-develop.yaml  python3-8.yaml
juliaset/: __init__.py  juliaset.py
tests/: test_class_juliaset.py  test_julia.py
